<resources>
    <string name="app_name">VIA Events</string>
    <string name="test_string">I am a test string!</string>

    <!-- Menu -->
    <string name="search">Search</string>
    <string name="more">More</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="nav_my_events">My events</string>
    <string name="nav_about_app">About app</string>
    <string name="nav_logout">Logout</string>

    <!-- AuthActivity -->
    <string name="tab_login">Login</string>
    <string name="tab_sign_up">Sign up</string>

    <!-- LoginFragment & SignUpFragment -->
    <string name="text_login">Login</string>
    <string name="text_sign_up">Sign up</string>
    <string name="text_username">VIA email</string>
    <string name="text_password">Password</string>
    <string name="text_login_help">To create an Account, please click the tab at the bottom.</string>
    <string name="text_name">Name</string>
    <string name="text_password_repeat">Password (repeat)</string>
    <string name="text_description">Description</string>

    <!-- EventsActivity -->
    <string name="events_title">List of Events</string>
    <string name="fab_event">Add new event</string>
    <string name="text_title">Title (required)</string>
    <string name="text_room">Room</string>
    <string name="text_pick_date">Pick date</string>
    <string name="text_pick_time">Pick time</string>
    <string name="my_events_title">My events</string>

    <!-- EventInfo -->
    <string name="tab_information">Information</string>
    <string name="tab_attendees">Attendees</string>
    <string name="tab_organizer">Organizer</string>

    <!-- CreateEvent -->
    <string name="createEvent_title">Create an event</string>
    <string name="event_is_public">Is event public?</string>
    <string name="text_tags">Event tags (ie. "party,workshop,music")</string>

    <!-- AboutActivity -->
    <string name="about_title">About this App</string>
    <string name="about_author">Developed by Viggo Petersen.</string>
    <string name="about_description">It is a 4th semester Android Course Exam Project made with love, care and soooo much Google searching. I wonder if the teachers even look at this page... They might not, probably? If you guys see this page, hi!</string>
</resources>