<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24dp"
            android:text="@string/text_sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <EditText
            android:id="@+id/signUpUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_username"
            app:layout_constraintTop_toBottomOf="@+id/headline"
            android:inputType="text"/>
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_name"
            app:layout_constraintTop_toBottomOf="@+id/signUpUsername"
            android:inputType="text"/>
        <EditText
            android:id="@+id/signUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password"
            app:layout_constraintTop_toBottomOf="@+id/name"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/signUpPasswordRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password_repeat"
            app:layout_constraintTop_toBottomOf="@+id/signUpPassword"
            android:inputType="text"/>
        <EditText
            android:id="@+id/signUpDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_description"
            android:maxLength="500"
            android:lines="3"
            app:layout_constraintTop_toBottomOf="@+id/signUpPasswordRepeat"
            android:inputType="textMultiLine"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/signUpDescription"
            android:layout_marginTop="50dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:onClick="signUp"
            android:text="@string/text_sign_up"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>